--- a/src/main/webapp/resources/style/style.css
+++ b/src/main/webapp/resources/style/style.css
@@ -4,9 +4,11 @@ body {
     width:100%;
     overflow: hidden;
     color: #080808;
+    margin:0;
+    padding:0;
 }
 #content{;
-	height:85%;
+	height:86%;
 }
 #footer{
 	text-align:center;
