--- a/src/main/webapp/resources/style/style.css
+++ b/src/main/webapp/resources/style/style.css
@@ -7,8 +7,9 @@ body {
     margin:0;
     padding:0;
 }
-#content{;
-	height:86%;
+#content{
+	height:85%;
+	margin:0;
 }
 #footer{
 	text-align:center;
